--- a/package.json
+++ b/package.json
@@ -54,12 +54,12 @@
     "@adobe/helix-shared": "6.0.5",
     "@adobe/openwhisk-action-logger": "2.2.0",
     "@adobe/openwhisk-action-utils": "4.2.2",
+    "@emmetio/expand-abbreviation": "^0.7.3",
     "ajv": "^6.10.2",
     "callsites": "^3.1.0",
     "clone": "^2.1.2",
     "dompurify": "2.0.8",
     "dot-prop": "^5.2.0",
-    "emmet": "^1.6.3",
     "ferrum": "^1.2.0",
     "fs-extra": "^9.0.0",
     "github-slugger": "^1.2.1",
