--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "unified": "^9.0.0",
     "unist-util-map": "^2.0.0",
     "unist-util-remove": "^2.0.0",
-    "unist-util-remove-position": "^2.0.1",
+    "unist-util-remove-position": "2.0.1",
     "unist-util-select": "^3.0.0",
     "unist-util-visit": "^2.0.0",
     "uri-js": "^4.2.2",
