--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "mdast-util-to-string": "^1.0.6",
     "micromatch": "^4.0.2",
     "object-hash": "^2.0.0",
+    "path-to-regexp": "^6.1.0",
     "property-information": "^5.2.2",
     "proxyquire": "2.1.3",
     "remark-parse": "^8.0.0",
