--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@adobe/helix-fetch": "1.9.1",
     "@adobe/helix-log": "4.5.1",
     "@adobe/helix-shared": "7.10.1",
+    "@adobe/helix-status": "8.1.3",
     "@adobe/openwhisk-action-logger": "2.2.0",
     "@adobe/openwhisk-action-utils": "4.2.3",
     "@emmetio/expand-abbreviation": "^0.7.3",
