--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "codecov": "3.7.2",
     "commitizen": "4.2.1",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.7.0",
-    "eslint-plugin-header": "3.0.0",
+    "eslint": "7.8.1",
+    "eslint-plugin-header": "3.1.0",
     "eslint-plugin-import": "2.22.0",
     "ghooks": "2.0.4",
     "hastscript": "6.0.0",
     "hyperscript": "2.0.2",
     "json-schema-to-typescript": "9.1.1",
-    "lint-staged": "10.2.13",
+    "lint-staged": "10.3.0",
     "mocha": "8.1.3",
     "mocha-junit-reporter": "2.0.0",
     "nock": "13.0.4",
@@ -58,44 +58,44 @@
     "@adobe/helix-status": "8.1.3",
     "@adobe/openwhisk-action-logger": "2.2.0",
     "@adobe/openwhisk-action-utils": "4.3.0",
-    "@emmetio/expand-abbreviation": "^0.7.3",
-    "ajv": "^6.10.2",
-    "callsites": "^3.1.0",
-    "clone": "^2.1.2",
-    "dompurify": "2.0.14",
-    "dot-prop": "^5.2.0",
-    "ferrum": "^1.2.0",
-    "fs-extra": "^9.0.0",
-    "github-slugger": "^1.2.1",
-    "hast-util-find-and-replace": "^3.0.0",
-    "hast-util-from-dom": "^3.0.0",
-    "js-yaml": "^3.13.1",
+    "@emmetio/expand-abbreviation": "0.7.3",
+    "ajv": "6.12.4",
+    "callsites": "3.1.0",
+    "clone": "2.1.2",
+    "dompurify": "2.0.15",
+    "dot-prop": "5.2.0",
+    "ferrum": "1.7.0",
+    "fs-extra": "9.0.1",
+    "github-slugger": "1.3.0",
+    "hast-util-find-and-replace": "3.1.0",
+    "hast-util-from-dom": "3.0.0",
+    "js-yaml": "3.14.0",
     "jsdom": "16.4.0",
-    "lodash": "^4.17.15",
-    "mdast-util-to-hast": "^9.0.0",
-    "mdast-util-to-string": "^1.0.6",
-    "micromatch": "^4.0.2",
-    "object-hash": "^2.0.0",
-    "path-to-regexp": "^6.1.0",
-    "property-information": "^5.2.2",
+    "lodash": "4.17.20",
+    "mdast-util-to-hast": "9.1.1",
+    "mdast-util-to-string": "1.1.0",
+    "micromatch": "4.0.2",
+    "object-hash": "2.0.3",
+    "path-to-regexp": "6.1.0",
+    "property-information": "5.5.0",
     "proxyquire": "2.1.3",
-    "remark-parse": "^8.0.0",
-    "request": "^2.87.0",
-    "request-promise-native": "^1.0.7",
-    "retext": "^7.0.0",
-    "retext-smartypants": "^4.0.0",
-    "strip-markdown": "^3.1.0",
-    "unified": "^9.0.0",
-    "unist-util-map": "^2.0.0",
-    "unist-util-remove": "^2.0.0",
+    "remark-parse": "8.0.3",
+    "request": "2.88.2",
+    "request-promise-native": "1.0.9",
+    "retext": "7.0.1",
+    "retext-smartypants": "4.0.0",
+    "strip-markdown": "3.1.2",
+    "unified": "9.2.0",
+    "unist-util-map": "2.0.1",
+    "unist-util-remove": "2.0.0",
     "unist-util-remove-position": "3.0.0",
-    "unist-util-select": "^3.0.0",
-    "unist-util-visit": "^2.0.0",
-    "uri-js": "^4.2.2",
-    "url-parse": "^1.4.6",
-    "web-namespaces": "^1.1.3",
-    "xml2js": "^0.4.19",
-    "xmlbuilder": "^15.0.0"
+    "unist-util-select": "3.0.1",
+    "unist-util-visit": "2.0.3",
+    "uri-js": "4.4.0",
+    "url-parse": "1.4.7",
+    "web-namespaces": "1.1.4",
+    "xml2js": "0.4.23",
+    "xmlbuilder": "15.1.1"
   },
   "lint-staged": {
     "*.js": "eslint"
