--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@adobe/helix-epsagon": "1.5.3",
     "@adobe/helix-fetch": "1.9.1",
     "@adobe/helix-log": "4.5.2",
+    "@adobe/helix-markdown-support": "1.2.0",
     "@adobe/helix-shared": "7.16.1",
     "@adobe/helix-status": "8.2.1",
     "@adobe/openwhisk-action-logger": "2.2.1",
@@ -77,7 +78,8 @@
     "object-hash": "2.0.3",
     "path-to-regexp": "6.2.0",
     "property-information": "5.6.0",
-    "remark-parse": "8.0.3",
+    "remark-gfm": "1.0.0",
+    "remark-parse": "9.0.0",
     "request": "2.88.2",
     "retext": "7.0.1",
     "retext-smartypants": "4.0.0",
