--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "fs-extra": "9.0.1",
     "github-slugger": "1.3.0",
     "hast-util-from-dom": "3.0.0",
+    "hast-util-to-html": "7.1.2",
     "js-yaml": "3.14.0",
     "jsdom": "16.4.0",
     "lodash": "4.17.20",
