--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: '10.x'
       - run: npm install
-#      - run: npm test
+      - run: npm test
       - run: npm run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
