--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "mdast-util-to-hast": "10.1.0",
     "mdast-util-to-string": "2.0.0",
     "micromatch": "4.0.2",
+    "node-fetch": "2.6.1",
     "object-hash": "2.1.1",
     "path-to-regexp": "6.2.0",
     "property-information": "5.6.0",
