--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2.1
 
 executors:
-  node10:
+  node12:
     docker:
-      - image: circleci/node:10.23.1-buster
+      - image: circleci/node:12
     environment:
       NPM_CONFIG_PREFIX: ~/.npm-global
 
@@ -33,7 +33,7 @@ orbs:
 
 jobs:
   build:
-    executor: node10
+    executor: node12
     steps:
       - setup
       - run: mkdir junit
@@ -50,7 +50,7 @@ jobs:
           path: junit
 
   generate-docs:
-    executor: node10
+    executor: node12
     steps:
       - setup
       - add_ssh_keys:
