--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@adobe/eslint-config-helix": "1.1.4",
+    "@adobe/helix-shared-dom": "1.0.2",
+    "@adobe/helix-shared-string": "1.0.2",
     "@adobe/helix-testutils": "0.4.5",
     "@adobe/jsonschema2md": "6.0.2",
     "@pollyjs/adapter-fetch": "5.1.0",
@@ -57,7 +59,9 @@
     "@adobe/helix-fetch": "2.2.0",
     "@adobe/helix-log": "5.0.3",
     "@adobe/helix-markdown-support": "1.4.0",
-    "@adobe/helix-shared": "8.0.3",
+    "@adobe/helix-shared-config": "1.0.2",
+    "@adobe/helix-shared-utils": "1.0.2",
+    "@adobe/helix-shared-wrap": "1.0.0",
     "@adobe/helix-status": "9.1.6",
     "@adobe/helix-universal-logger": "1.0.2",
     "@adobe/openwhisk-action-logger": "2.4.4",
