--- a/package.json
+++ b/package.json
@@ -103,6 +103,9 @@
     "xml2js": "0.4.23",
     "xmlbuilder": "15.1.1"
   },
+  "mocha": {
+    "require": "test/setup-env.js"
+  },
   "lint-staged": {
     "*.js": "eslint"
   },
