--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "nock": "13.2.1",
     "nyc": "15.1.0",
     "proxyquire": "2.1.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "semantic-release": "18.0.0",
     "sinon": "12.0.1",
     "unist-builder": "2.0.3",
